<resources>
    <string name="app_name">GUIDE_APP FOR MUSICIANS</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="show_password">Show Password</string>
    <string name="register">Register</string>
    <string name="user_email">User Email</string>
    <string name="cricketer_name">Cricketer Name</string>
    <string name="team_name">Team Name</string>
    <string name="cricketer_list">Cricketer List</string>
    <string name="add">Add</string>
    <string name="submit_list">Submit List</string>
    <!-- Strings used for fragments for navigation -->

</resources>