<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/wallpaper"
    tools:context=".Register">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        android:gravity="center_horizontal"
        android:text="@string/create_account"
        android:fontFamily="@font/aclonica"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="25sp" />

    <EditText
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:hint="@string/user_email"
        android:id="@+id/register_email"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/aclonica"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:autofillHints=""
        tools:targetApi="lollipop" />

    <EditText
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:id="@+id/register_password"
        android:inputType="textPassword"
        android:fontFamily="@font/aclonica"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        tools:targetApi="lollipop"
        android:autofillHints="" />

    <EditText
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:id="@+id/register_confirm_password"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/aclonica"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:autofillHints=""
        tools:targetApi="lollipop" />

    <CheckBox
        android:id="@+id/register_checkbox"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:buttonTint="@android:color/white"
        android:text="@string/show_password"
        android:textColor="@android:color/white"
        android:layout_marginEnd="30dp"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/black"
        android:text="@string/register"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/register_login_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/purple_200"
        android:text="@string/login"
        android:textColor="@android:color/white" />

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_progressBar"
        android:indeterminateTint="@android:color/white"
        android:indeterminate="true"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:visibility="invisible"
        android:layout_marginTop="20dp"
        tools:targetApi="lollipop" />




</LinearLayout>